<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/SwipeRefreshUSettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <LinearLayout
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ip_address"
                    android:paddingBottom="5dp"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/settings_ip_address_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_elements"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:singleLine = "true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="30sp"/>
            </LinearLayout>
            <LinearLayout
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/port_number"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/settings_port_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_elements"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine = "true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:inputType="number"
                    android:textSize="30sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"></LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/settings_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/settings_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.SwipeRefreshLayout>