<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/SwipeRefreshSecurity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <Switch
                android:id="@+id/alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="150dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:thumb="@drawable/thumb"
                android:textOff="@string/disabled"
                android:textOn="@string/enabled"
                android:showText="true"
                android:track="@drawable/track"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_level"
                    android:layout_gravity="center"
                    android:textSize="25sp"/>
                <EditText
                    android:id="@+id/alarm_level"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:background="@drawable/background_elements"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"></LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.SwipeRefreshLayout>