<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="12dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/edit_user"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/colorHomeButtonsSecondary" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="User Name:"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <EditText android:id="@+id/edit_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:singleLine = "true"
                        android:paddingLeft="10dp"
                        android:background="@drawable/background_elements"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Password:"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <EditText android:id="@+id/edit_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:singleLine = "true"
                        android:paddingLeft="10dp"
                        android:background="@drawable/background_elements"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="First Name:"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <EditText android:id="@+id/edit_user_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:singleLine = "true"
                        android:paddingLeft="10dp"
                        android:background="@drawable/background_elements"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Last Name:"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <EditText android:id="@+id/edit_user_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:singleLine = "true"
                        android:paddingLeft="10dp"
                        android:background="@drawable/background_elements"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="User Role:"
                        android:textSize="17sp"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3">

                    <Spinner
                        android:id="@+id/edit_user_role"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/user_roles_usable"
                        android:background="@drawable/background_elements"
                        android:spinnerMode="dropdown" />
                </LinearLayout>


            </LinearLayout>


                </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/edit_user_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/edit_user_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>